// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewStyled should render Absolute correctly correctly 1`] = `
<View
  style={
    Array [
      Object {
        "position": "absolute",
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#1D1E20",
          "fontFamily": "Inter-Regular",
          "fontSize": 24,
          "lineHeight": 22,
          "textAlign": "center",
        },
      ]
    }
    type="h1"
  >
    Lorem ipsum dolor sit a
  </Text>
</View>
`;

exports[`ViewStyled should render Divider correctly correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1D1E20",
        "height": 1,
        "marginVertical": 0,
        "width": "100%",
      },
    ]
  }
/>
`;

exports[`ViewStyled should render ViewBorder10 correctly 1`] = `
<View
  bgColor="yellow"
  h={30}
  style={
    Array [
      Object {
        "backgroundColor": "yellow",
        "borderRadius": 10,
        "height": 30,
        "width": 200,
      },
    ]
  }
  w={200}
/>
`;

exports[`ViewStyled should render ViewBorder20 correctly 1`] = `
<View
  bgColor="red"
  style={
    Array [
      Object {
        "backgroundColor": "red",
        "borderRadius": 20,
        "width": "100%",
      },
    ]
  }
/>
`;

exports[`ViewStyled should render default correctly 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
    ]
  }
/>
`;
